Weekend work save
* Motor assistance fix
* Orientation fix
* Work with PID tab
* Work with FILTER tab
* Work with 3D model representation
* Version changed to 0.1.0
* CLI text color changed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -76,6 +76,7 @@
   "THROTTLE": "THROTTLE",
   "ESC": "ESC",
   "PID": "PIDS",
+  "SPA": "SPA",
   "RATES": "RATES",
   "FILTERS": "FILTERS",
   "MOTORS": "MOTORS",
@@ -169,7 +170,19 @@
   "pid_process_denom": "PID Loop",
   "buttered_pids": "Buttered Pids",
   "tpa_breakpoint": "Throttle Breakpoint",
+  "tpa_rate_p": "TPA Rate P",
+  "tpa_rate_i": "TPA Rate I",
+  "tpa_rate_d": "TPA Rate D",
+  "nfe_racermode": "NFE racer mode",
   "tpa_rate": "Attenuation Rate",
+  "smart_dterm_smoothing": "Smart Dterm smoothing",
+  "smart_dterm_smoothing_pitch": "Pitch",
+  "smart_dterm_smoothing_roll": "Roll",
+  "smart_dterm_smoothing_yaw": "Yaw",
+  "witchcraft": "WitchCraft",
+  "witchcraft_roll": "Pitch",
+  "witchcraft_pitch": "Roll",
+  "witchcraft_yaw": "Yaw",
   "align_gyro": "Gyro Orientation",
   "align_acc": "Accelerometer Orientation",
   "align_mag": "Magnometer Orientation",
@@ -191,6 +204,7 @@
   "3d_neutral": "3D Neutral",
   "3d_deadband_throttle": "3D Throttle Deadband",
   "mixer_type": "Mixer Type",
+  "iterm_rotation": "iTerm rotation",
   "OFF": "OFF",
   "ON": "ON",
   "32khz": "32K",
@@ -226,6 +240,15 @@
   "p_yaw": "Yaw P",
   "i_yaw": "Yaw I",
   "d_yaw": "Yaw D",
+  "spa_pitch_p": "Pitch P",
+  "spa_pitch_i": "Pitch I",
+  "spa_pitch_d": "Pitch D",
+  "spa_roll_p": "Roll P",
+  "spa_roll_i": "Roll I",
+  "spa_roll_d": "Roll D",
+  "spa_yaw_p": "Yaw P",
+  "spa_yaw_i": "Yaw I",
+  "spa_yaw_d": "Yaw D",
   "roll_rc_rate": "RC Rate",
   "pitch_rc_rate": "RC Rate",
   "yaw_rc_rate": "RC Rate",
@@ -535,10 +558,14 @@
   "BIQUAD": "BIQUAD",
   "KALMAN": "KALMAN",
   "PT1": "PT1",
+  "dterm_lowpass": "DTERM lowpass filter",
   "dterm_lowpass_hz_type": "DTERM LPF",
   "dterm_lowpass_hz_roll": "DTERM ROLL LPF hz",
   "dterm_lowpass_hz_pitch": "DTERM PITCH LPF hz",
   "dterm_lowpass_hz_yaw": "DTERM YAW LPF hz",
+  "dterm_lowpass2_hz_roll": "DTERM ROLL LPF 2 hz",
+  "dterm_lowpass2_hz_pitch": "DTERM PITCH LPF 2 hz",
+  "dterm_lowpass2_hz_yaw": "DTERM YAW LPF 2 hz",
   "dterm_notch_hz": "DTERM Notch hz",
   "dterm_notch_cutoff": "DTERM Cutoff hz",
   "esc_sensor_halfduplex": "ESC Sensor Halfduplex",
