--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -111,9 +111,10 @@
   "imuf.needs-update": "IMU-F needs updated",
   "imuf.update.message": "\n\n**********<h1>YOU ARE IN IMU-F UPDATE MODE.\nDO NOT UNPLUG YOUR DEVICE UNTIL UPDATE IS COMPLETE OR YOU'RE GONNA HAVE A BAD TIME.</h1><img id=\"pbjt\" src=\"assets/teehee.png\" height=\"90\" width=\"90\"/><br/>**********\n\n",
   "dfu.flash.message": "\n\n**********<h1>YOU ARE IN DFU MODE.\nDO NOT UNPLUG YOUR DEVICE UNTIL FLASHING IS COMPLETE OR YOU'RE GONNA HAVE A BAD TIME.</h1><img id=\"pbjt\" src=\"assets/dfu.gif\" height=\"90\" width=\"90\"/><br/>#flyhelio\n**********\n\n",
+  "dfu.release.title": "Select a release",
   "dfu.target.title": "Select a target",
-  "dfu.target.firmware-type": "Select a firmware",
   "dfu.select.version": "Select a version",
+  "dfu.flash.title": "Flash EmuFlight",
   "dfu.load.fail": "Unable to load file",
   "dfu.full-erase": "Erase Flash",
   "telemetry.gyro.roll": "Gyro Roll: {value}",
