--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,7 +12,7 @@
   "common.next": "Next",
   "common.continue": "Continue...",
   "common.finished": "Finished",
-  "common.version-info": "Version Info",
+  "common.version-info": "Version Info / Flasher",
   "common.telemetry": "Telemetry",
   "common.or": "OR:",
   "common.roll": "Roll",
@@ -112,7 +112,7 @@
   "route.ADVANCED": "ADVANCED",
   "safety.remove-props": "Please remove the propellers from your quad before proceeding!",
   "safety.accepts-risk": "I ACCEPT",
-  "disconnected.title": "Nemesis multi-firmware UI v{version}",
+  "disconnected.title": "Nemesis v{version}",
   "disconnected.headline": "Please connect a compatible FC",
   "disconnected.autodetect": "We will automatically detect it...",
   "disconnected.incompatible": "Incompatible device, there be dragons ahead...",
