Fix warnings on PID tab

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -280,7 +280,7 @@
   "MULTISHOT": "MULTISHOT",
   "ONESHOT125": "ONESHOT125",
   "ONESHOT42": "ONESHOT42",
-  "BRUSHED": "BURSHED",
+  "BRUSHED": "BRUSHED",
   "DSHOT150": "DSHOT150",
   "DSHOT300": "DSHOT300",
   "DSHOT600": "DSHOT600",
