Fix all warnings on motors tab

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -882,5 +882,32 @@
   "yaw_kd_rap3": "Dterm LPF Yaw",
   "imuf_w1": "IMU-F W",
   "imuf_w2": "IMU-F W",
-  "imuf_w3": "IMU-F W"
+  "imuf_w3": "IMU-F W",
+  "TRI": "TRI",
+  "QUADP": "QUADP",
+  "QUADX": "QUADX",
+  "BI": "BI",
+  "GIMBAL": "GIMBAL",
+  "Y6": "Y6",
+  "HEX6": "HEX6",
+  "FLYING_WING": "FLYING WING",
+  "Y4": "Y4",
+  "HEX6X": "HEX6X",
+  "OCTOX8": "OCTOX8",
+  "OCTOFLATP": "OCTOFLATP",
+  "OCTOFLATX": "OCTOFLATX",
+  "AIRPLANE": "AIRPLANE",
+  "HELI_120_CCPM": "HELI 120 CCPM",
+  "HELI_90_DEG": "HELI 90 DEG",
+  "VTAIL4": "VTAIL4",
+  "HEX6H": "HEX6H",
+  "PPM_TO_SERVO": "PPM TO SERVO",
+  "DUALCOPTER": "DUALCOPTER",
+  "SINGLECOPTER": "SINGLECOPTER",
+  "ATAIL4": "ATAIL4",
+  "Custom": "Custom",
+  "CUSTOMAIRPLANE": "CUSTOMAIRPLANE",
+  "CUSTOMTRI": "CUSTOMTRI",
+  "QUADX1234": "QUADX1234",
+  "BEEP": "BEEP"
 }
