--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -101,7 +101,7 @@
   "route.ADVANCED": "ADVANCED",
   "safety.remove-props": "Please remove the propellers from your quad before proceeding!",
   "safety.accepts-risk": "I ACCEPT",
-  "disconnected.title": "Nemesis v{version}",
+  "disconnected.title": "IMUF Flasher",
   "disconnected.headline": "Please connect a compatible FC",
   "disconnected.autodetect": "We will automatically detect it...",
   "disconnected.incompatible": "Incompatible device, there be dragons ahead...",
