Fix error when unsupported firmware connected. Put version info on main screen

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -116,7 +116,7 @@
   "disconnected.headline": "Please connect a compatible FC",
   "disconnected.autodetect": "We will automatically detect it...",
   "disconnected.incompatible": "Incompatible device, there be dragons ahead...",
-  "disconnected.cli.incompatible": "**********<h1>YOU ARE IN CLI MODE.\nTHIS FIRMWARE IS NOT OFFICIALLY SUPPORTED.\nPLEASE REBOOT INTO DFU AND FLASH A SUPPORTED VERSION.</h1>**********\n{error}",
+  "disconnected.cli.incompatible": "**********<h1>THIS FIRMWARE IS NOT OFFICIALLY SUPPORTED.\nPLEASE DISCONNECT AND SEE THE SUPPORTED FIRWMARE VERSIONS.</h1>**********\n{error}",
   "imuf.title": "IMU-F Updater",
   "imuf.select.version": "Select a version to flash IMU-F",
   "imuf.needs-update": "IMU-F needs updated",
