CLI telemetry for rx, vbat, gyro. Add vbat to top bar. fix RX view to show sticks

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -148,6 +148,7 @@
   "info.imuf": "IMU-F Version: {value}",
   "info.connected-to": "Connected to:",
   "info.cpu-load": "CPU: {percent}%",
+  "info.vbat": "Vbat: {vbat}V",
   "info.loop-time": "LOOPTIME: {time}",
   "info.loop-speed": "{khz}kHz",
   "info.show-debug": "Show Debug",
