--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -742,10 +742,10 @@
   "yaw_rate_limit": "Yaw Spin Threshold",
   "yaw_lowpass_hz": "Yaw Lowpass hz",
   "i_decay": "i Decay",
-  "emu_boost": " EMU Boost",
-  "emu_boost_limit": "EMU Boost limit",
-  "emu_boost_yaw": "EMU Boost YAW",
-  "emu_boost_limit_yaw": "EMU Boost YAW limit",
+  "emuboost": "EMU Boost",
+  "emuboost_limit": "EMU Boost limit",
+  "emuboost_yaw": "EMU Boost YAW",
+  "emuboost_limit_yaw": "EMU Boost YAW limit",
   "feathered_pids": "Feathered PIDs",
   "NEW": "NEW",
   "OLD": "OLD",
