--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -165,6 +165,7 @@
   "blackbox.load-drive": "Load as drive to download blackbox",
   "blackbox.erase-storage": "Erase blackbox",
   "aux.item.save": "Set Mode",
+  "aux.select.channel": "Select a channel and range",
   "pid_profile": "Active Profile",
   "rate_profile": "Active Profile",
   "rates_type": "Rate Style",
