--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -320,7 +320,7 @@
   "AUX 11": "Aux Chan. 11",
   "AUX 12": "Aux Chan. 12",
   "AUX 13": "Aux Chan. 13",
-  "ARM": "Armed",
+  "ARM": "Arm",
   "ANGLE": "Angle",
   "HORIZON": "Horizon",
   "GPSHOME": "GPS RTH",
