More aux tab layout

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -166,6 +166,48 @@
   "blackbox.erase-storage": "Erase blackbox",
   "aux.item.save": "Set Mode",
   "aux.select.channel": "Select a channel and range",
+  "aux.explanation.ARM": "Activate the aircraft, allowing it to fly.",
+  "aux.explanation.ANGLE": "Commonly known as \"self-level\" mode.",
+  "aux.explanation.HORIZON": "Like angle mode, but allows for complete flips and rolls.",
+  "aux.explanation.MAG": "",
+  "aux.explanation.HEADLESS": "",
+  "aux.explanation.PASSTHRU": "",
+  "aux.explanation.FAILSAFE": "",
+  "aux.explanation.GPSRESCUE": "",
+  "aux.explanation.NFE": "Acro for pitch, angle for roll. Popular with whoop racers.",
+  "aux.explanation.ANTIGRAVITY": "",
+  "aux.explanation.HEADADJ": "",
+  "aux.explanation.CAMSTAB": "",
+  "aux.explanation.BEEPERON": "",
+  "aux.explanation.LEDLOW": "",
+  "aux.explanation.CALIB": "",
+  "aux.explanation.OSD": "",
+  "aux.explanation.TELEMETRY": "",
+  "aux.explanation.SERVO1": "",
+  "aux.explanation.SERVO2": "",
+  "aux.explanation.SERVO3": "",
+  "aux.explanation.BLACKBOX": "",
+  "aux.explanation.AIRMODE": "",
+  "aux.explanation.3D": "",
+  "aux.explanation.FPVANGLEMIX": "",
+  "aux.explanation.BLACKBOXERASE": "",
+  "aux.explanation.CAMERA1": "",
+  "aux.explanation.CAMERA2": "",
+  "aux.explanation.CAMERA3": "",
+  "aux.explanation.FLIPOVERAFTERCRASH": "",
+  "aux.explanation.PREARM": "",
+  "aux.explanation.BEEPGPSCOUNT": "",
+  "aux.explanation.VTXPITMODE": "",
+  "aux.explanation.PARALYZE": "Causes your aircraft to no longer respond. Useful in races after crashing.",
+  "aux.explanation.USER1": "",
+  "aux.explanation.USER2": "",
+  "aux.explanation.USER3": "",
+  "aux.explanation.USER4": "",
+  "aux.explanation.PIDAUDIO": "",
+  "aux.explanation.VTXCONTROLDISABLE": "",
+  "aux.explanation.MSPOVERRIDE": "",
+  "aux.explanation.STICKCOMMANDDISABLE": "",
+  "aux.explanation.BEEPERMUTE": "",
   "pid_profile": "Active Profile",
   "rate_profile": "Active Profile",
   "rates_type": "Rate Style",
