--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -373,6 +373,7 @@
   "ANTIGRAVITY": "ANTI-GRAVITY",
   "BEEPERON": "BEEPER",
   "AIRMODE": "AIRMODE",
+  "NFE": "NFE Racer Mode",
   "3D": "3D MODE",
   "BLACKBOXERASE": "Erase BBL",
   "CAMERA1": "Camera 1",
