add aux.title to translations and channel item view

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -362,26 +362,42 @@
   "AUX 11": "Aux Chan. 11",
   "AUX 12": "Aux Chan. 12",
   "AUX 13": "Aux Chan. 13",
-  "ARM": "Arm",
-  "ANGLE": "Angle",
-  "HORIZON": "Horizon",
-  "GPSHOME": "GPS RTH",
-  "GPSHOLD": "GPS Hold",
-  "HEADFREE": "Headless",
-  "RANGEFINDER": "RANGE FINDER",
-  "FAILSAFE": "Failsafe",
-  "ANTIGRAVITY": "ANTI-GRAVITY",
-  "BEEPERON": "BEEPER",
-  "AIRMODE": "AIRMODE",
-  "NFE": "NFE Racer Mode",
-  "3D": "3D MODE",
-  "BLACKBOXERASE": "Erase BBL",
-  "CAMERA1": "Camera 1",
-  "CAMERA2": "Camera 2",
-  "CAMERA3": "Camera 3",
-  "FLIPOVERAFTERCRASH": "Turtle Mode",
-  "PREARM": "Pre-Arm",
-  "VTXPITMODE": "VTX Pit-mode",
+  "aux.title.ARM": "Arm",
+  "aux.title.ANGLE": "Angle",
+  "aux.title.HORIZON": "Horizon",
+  "aux.title.GPSHOME": "GPS RTH",
+  "aux.title.GPSHOLD": "GPS Hold",
+  "aux.title.HEADFREE": "Headless",
+  "aux.title.RANGEFINDER": "RANGE FINDER",
+  "aux.title.FAILSAFE": "Failsafe",
+  "aux.title.ANTIGRAVITY": "ANTI-GRAVITY",
+  "aux.title.BEEPERON": "BEEPER",
+  "aux.title.AIRMODE": "AIRMODE",
+  "aux.title.NFE": "NFE Racer Mode",
+  "aux.title.3D": "3D MODE",
+  "aux.title.BLACKBOXERASE": "Erase BBL",
+  "aux.title.CAMERA1": "Camera 1",
+  "aux.title.CAMERA2": "Camera 2",
+  "aux.title.CAMERA3": "Camera 3",
+  "aux.title.FLIPOVERAFTERCRASH": "Turtle Mode",
+  "aux.title.PREARM": "Pre-Arm",
+  "aux.title.VTXPITMODE": "VTX Pit-mode",
+  "aux.title.MAG": "MAG",
+  "aux.title.HEADLESS": "HEADLESS",
+  "aux.title.PASSTHRU": "PASSTHRU",
+  "aux.title.GPSRESCUE": "GPSRESCUE",
+  "aux.title.HEADADJ": "HEADADJ",
+  "aux.title.CAMSTAB": "CAMSTAB",
+  "aux.title.LEDLOW": "LEDLOW",
+  "aux.title.CALIB": "CALIB",
+  "aux.title.OSD": "OSD",
+  "aux.title.TELEMETRY": "TELEMETRY",
+  "aux.title.SERVO1": "SERVO1",
+  "aux.title.SERVO2": "SERVO2",
+  "aux.title.SERVO3": "SERVO3",
+  "aux.title.BLACKBOX": "BLACKBOX",
+  "aux.title.BEEPGPSCOUNT": "BEEPGPSCOUNT",
+
   "USB_VCP": "USB VCP",
   "UART": "TX/RX",
   "UART1": "TX/RX 1",
