set chan labels, rework telemetry, set channel change select

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -349,19 +349,19 @@
   "NONE": "NONE",
   "Aux Channel": "Aux Channel",
   "Mode": "Flight Mode",
-  "AUX 1": "Aux Chan. 1",
-  "AUX 2": "Aux Chan. 2",
-  "AUX 3": "Aux Chan. 3",
-  "AUX 4": "Aux Chan. 4",
-  "AUX 5": "Aux Chan. 5",
-  "AUX 6": "Aux Chan. 6",
-  "AUX 7": "Aux Chan. 7",
-  "AUX 8": "Aux Chan. 8",
-  "AUX 9": "Aux Chan. 9",
-  "AUX 10": "Aux Chan. 10",
-  "AUX 11": "Aux Chan. 11",
-  "AUX 12": "Aux Chan. 12",
-  "AUX 13": "Aux Chan. 13",
+  "AUX 1": "AUX 1",
+  "AUX 2": "AUX 2",
+  "AUX 3": "AUX 3",
+  "AUX 4": "AUX 4",
+  "AUX 5": "AUX 5",
+  "AUX 6": "AUX 6",
+  "AUX 7": "AUX 7",
+  "AUX 8": "AUX 8",
+  "AUX 9": "AUX 9",
+  "AUX 10": "AUX 10",
+  "AUX 11": "AUX 11",
+  "AUX 12": "AUX 12",
+  "AUX 13": "AUX 13",
   "aux.title.ARM": "Arm",
   "aux.title.ANGLE": "Angle",
   "aux.title.HORIZON": "Horizon",
