Rename tab AUX MODES -> MODES

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -97,7 +97,7 @@
   "route.RATES": "RATES",
   "route.FILTERS": "FILTERS",
   "route.MOTORS": "MOTORS & LAYOUT",
-  "route.MODES": "AUX MODES",
+  "route.MODES": "MODES",
   "route.BATTERY": "VOLTAGE & CURRENT",
   "route.RX": "RECEIVER",
   "route.FEATURES": "FEATURES",
