Fix modes tab mappings by mode.id value and not index

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -388,7 +388,7 @@
   "aux.title.GPSRESCUE": "GPS Rescue",
   "aux.title.HEADADJ": "Heading Adjust",
   "aux.title.CAMSTAB": "Camera Stabilization",
-  "aux.title.LEDLOW": "LED Strip Disablee",
+  "aux.title.LEDLOW": "LED Strip Disable",
   "aux.title.CALIB": "Calibrate Accelerometer",
   "aux.title.OSD": "Disable OSD",
   "aux.title.TELEMETRY": "Telemetry",
