use cli calibrate accelerometer command, update names of some receiver protocols

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -431,10 +431,12 @@
   "SBUS": "SBUS",
   "FPORT": "FrSky F.Port",
   "CRSF": "TBS Crossfire",
-  "SRXL": "SRXL",
+  "GHST": "ImmersionRC Ghost",
+  "SRXL": "SPEKTRUM2048/SRXL",
+  "SRXL2": "SPEKTRUM SRXL2",
   "CUSTOM": "Custom",
-  "SPEK1024": "SPEK1024",
-  "SPEK2048": "SPEK2048",
+  "SPEK1024": "SPEKTRUM1024",
+  "SPEK2048": "SPEKTRUM2048",
   "IBUS": "IBUS",
   "SUMD": "SUMD",
   "SUMH": "SUMH",
