Update MSP label for ports tab

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -415,7 +415,7 @@
   "SOFTSERIAL1": "Soft Serial 1",
   "SOFTSERIAL2": "Soft Serial 2",
   "RX_SERIAL": "RECEIVER",
-  "MSP": "USB Serial",
+  "MSP": "MSP/DJI Air Unit",
   "TELEMETRY_FRSKY_HUB": "FrSky Telemetry Hub",
   "TELEMETRY_HOTT": "HOTT Telemetry",
   "TELEMETRY_LTM": "LTM",
