Update labels in RX tab

--- a/src/translations/cn.json
+++ b/src/translations/cn.json
@@ -316,7 +316,7 @@
   "UART7": "TX/RX 7",
   "SOFTSERIAL1": "Soft Serial 1",
   "SOFTSERIAL2": "Soft Serial 2",
-  "RX_SERIAL": "RECEIVER",
+  "RX_SERIAL": "RX Over Serial",
   "MSP": "USB Serial",
   "TELEMETRY_FRSKY_HUB": "FrSky Telemetry Hub",
   "TELEMETRY_HOTT": "HOTT Telemetry",
@@ -354,7 +354,7 @@
   "DISPLAY": "MSP DISPLAYPORT",
   "CHANNEL_FORWARDING": "CHANNEL FORWARDING",
   "TRANSPONDER": "RACE TRANSPONDER",
-  "RX_SPI": "RECEIVER OVER SPI",
+  "RX_SPI": "RX Over SPI",
   "SOFTSPI": "SOFT SPI",
   "ANTI_GRAVITY": "ANTI-GRAVITY",
   "DYNAMIC_FILTER": "DYNAMIC NOTCH",
