--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -89,7 +89,7 @@
   "VTX": "VTX",
   "OSD": "OSD",
   "GYRO": "GYRO",
-  "TELEMETRY": "TELEMETRY",
+  "TELEMETRY": "Telemetry",
   "LEDS": "LEDS",
   "PORTS": "PORTS",
   "BLACKBOX": "BLACKBOX",
@@ -416,7 +416,7 @@
   "UART7": "TX/RX 7",
   "SOFTSERIAL1": "Soft Serial 1",
   "SOFTSERIAL2": "Soft Serial 2",
-  "RX_SERIAL": "RECEIVER",
+  "RX_SERIAL": "RX Over Serial",
   "MSP": "MSP/DJI Air Unit",
   "TELEMETRY_FRSKY_HUB": "FrSky Telemetry Hub",
   "TELEMETRY_HOTT": "HOTT Telemetry",
@@ -444,19 +444,19 @@
   "SUMH": "SUMH",
   "XB-B": "XB-B",
   "XB-B-RJ01": "XB-B-RJ01",
-  "RX_PPM": "RECEIVER PPM",
+  "RX_PPM": "Receiver PPM",
   "INFLIGHT_ACC_CAL": "INFLIGHT ACC CALIBRATION",
   "MOTOR_STOP": "MOTOR STOP",
   "SERVO_TILT": "SERVO TILT",
   "SOFTSERIAL": "SOFT SERIAL",
-  "RX_PARALLEL_PWM": "PARALLEL RECEIVER PWM",
+  "RX_PARALLEL_PWM": "Parallel Receiver PWM",
   "RX_MSP": "RECEIVER MSP",
-  "RSSI_ADC": "ANALOG RSSI",
+  "RSSI_ADC": "Analog RSSI",
   "LED_STRIP": "LEDS",
   "DISPLAY": "MSP DISPLAYPORT",
-  "CHANNEL_FORWARDING": "CHANNEL FORWARDING",
+  "CHANNEL_FORWARDING": "Channel Forwarding",
   "TRANSPONDER": "RACE TRANSPONDER",
-  "RX_SPI": "RECEIVER OVER SPI",
+  "RX_SPI": "RX Over SPI",
   "SOFTSPI": "SOFT SPI",
   "ANTI_GRAVITY": "ANTI-GRAVITY",
   "DYNAMIC_FILTER": "DYNAMIC NOTCH",
@@ -468,7 +468,7 @@
   "max_check": "Stick High",
   "rssi_channel": "RSSI Channel",
   "rssi_scale": "RSSI Scale",
-  "rc_interp_ch": "RC Interpolateion Channels",
+  "rc_interp_ch": "RC Interpolation Channels",
   "rc_interp_int": "RC Interpolation MS",
   "serialrx_provider": "RX Protocol",
   "serialrx_inverted": "RX Signal Inversion",
