Change cpu_overclock_freq to MHZ

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -686,9 +686,9 @@
   "SOFTWARE_PWM": "Software",
   "DAC": "DAC",
   "cpu_overclock": "CPU Overclock Freq",
-  "192MHZ": "Low",
-  "216MHZ": "Medium",
-  "240MHZ": "High",
+  "192MHZ": "192MHZ",
+  "216MHZ": "216MHZ",
+  "240MHZ": "240MHZ",
   "crash_recovery": "Crash Detection",
   "current_meter": "Current Sensor Source",
   "displayport_max7456_inv": "OSD Inverted",
