Add SPI receiver config to RX tab

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -472,6 +472,9 @@
   "rssi_scale": "RSSI Scale",
   "rc_interp_ch": "RC Interpolation Channels",
   "rc_interp_int": "RC Interpolation MS",
+  "rx_spi_protocol": "RX SPI Protocol",
+  "rx_spi_led_inversion": "RX SPI LED Inversion",
+  "rx_spi_bus": "RX SPI Bus",
   "serialrx_provider": "RX Protocol",
   "serialrx_inverted": "RX Signal Inversion",
   "spektrum_sat_bind": "Spectrum Bind",
