Re-order tabs and change labels

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -78,41 +78,43 @@
   "YAW": "YAW",
   "THROTTLE": "THROTTLE",
   "ESC": "ESC",
-  "PID": "PIDS",
   "SPA": "SPA",
-  "RATES": "RATES",
-  "FILTERS": "FILTERS",
-  "MOTORS": "MOTORS",
-  "MODES": "MODES",
-  "RX": "RX",
-  "FEATURES": "FEATURES",
+  "RATES": "Rates",
+  "FILTERS": "Filters",
+  "MOTORS": "Motors",
+  "MODES": "Modes",
+  "FEATURES": "Features",
   "GPS": "GPS",
   "VTX": "VTX",
   "OSD": "OSD",
   "GYRO": "GYRO",
   "TELEMETRY": "Telemetry",
   "LEDS": "LEDS",
-  "PORTS": "PORTS",
-  "BLACKBOX": "BLACKBOX",
-  "ADVANCED": "ADVANCED",
-  "route.PFC": "PRE-FLIGHT CHECK",
-  "route.PID": "PIDS",
-  "route.RATES": "RATES",
-  "route.FILTERS": "FILTERS",
-  "route.MOTORS": "MOTORS & LAYOUT",
-  "route.MODES": "MODES",
-  "route.BATTERY": "VOLTAGE & CURRENT",
-  "route.RX": "RECEIVER",
-  "route.FEATURES": "FEATURES",
-  "route.GPS": "GPS & TRACKING",
+  "PORTS": "Ports",
+  "BLACKBOX": "Blackbox",
+  "PFC": "Setup",
+  "route.PFC": "Setup",
+  "PID": "PID Tuning",
+  "route.PID": "PID Tuning",
+  "route.RATES": "Rates",
+  "route.FILTERS": "Filters",
+  "route.MOTORS": "Motors",
+  "route.MODES": "Modes",
+  "BATTERY": "Power & Battery",
+  "route.BATTERY": "Power & Battery",
+  "RX": "Receiver",
+  "route.RX": "Receiver",
+  "route.FEATURES": "Features",
+  "route.GPS": "GPS",
   "route.VTX": "VTX",
   "route.OSD": "OSD",
   "route.GYRO": "GYRO",
-  "route.TELEMETRY": "TELEMETRY",
+  "route.TELEMETRY": "Telemetry",
   "route.LEDS": "LEDS",
-  "route.PORTS": "PORTS",
-  "route.BLACKBOX": "BLACKBOX LOGGING",
-  "route.ADVANCED": "ADVANCED",
+  "route.PORTS": "Ports",
+  "route.BLACKBOX": "Blackbox",
+  "route.ADVANCED": "Advanced",
+  "ADVANCED": "Advanced",
   "safety.remove-props": "Please remove the propellers from your quad before proceeding!",
   "safety.accepts-risk": "I ACCEPT",
   "disconnected.title": "Nemesis v{version}",
@@ -699,7 +701,6 @@
   "debug_mode": "Debugging Mode",
   "CYCLETIME": "CYCLETIME",
   "GYRO_FILTERED": "GYRO_FILTERED",
-  "BATTERY": "BATTERY",
   "ACCELEROMETER": "",
   "PIDLOOP": "PIDLOOP",
   "NOTCH": "NOTCH",
